--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                             <li class="ml-2">
                                 <a class="flex justify-center items-center text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out"
                                     href="https://github.com/chevere/xrdebug" aria-label="Github">
-                                    <img src="./images/chevere.svg"
+                                    <img src="./images/chevere.svg">
                                 </a>
                             </li>
                         </ul>
