remove video preload

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                         <!-- Hero image -->
                         <div class="pt-16 pb-12 mb-4" data-aos="fade-up" data-aos-delay="300">
-                            <video class="mx-auto" width="80%" controls muted autoplay loop>
+                            <video class="mx-auto" width="80%" controls muted autoplay loop preload="none">
                                 <source src="xrdebug.mp4" type="video/mp4">
                             </video>
                         </div>
