--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             </li>
                             <li class="ml-3">
                                 <a class="btn-sm text-white bg-indigo-500 hover:bg-indigo-600 w-full shadow-sm group xrdebug-gradient" href="https://github.com/xrdebug/xrdebug/releases/latest">
-                                    Download binary <span class="tracking-normal group-hover:translate-x-0.5 transition-transform duration-150 ease-in-out ml-1">-&gt;</span>
+                                    Download <span class="tracking-normal group-hover:translate-x-0.5 transition-transform duration-150 ease-in-out ml-1">-&gt;</span>
                                 </a>
                             </li>
                         </ul>
@@ -395,18 +395,7 @@
                             <div class="mb-2">
                                 <!-- Logo -->
                                 <a class="inline-flex" href="https://chevere.org/" aria-label="Chevere" target="_blank">
-                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" data-name="Chevere" width="150" height="150" viewBox="0 0 395.5 395.5">
-                                        <defs>
-                                            <linearGradient id="Cooler" x1="725.45" y1="1920.6" x2="725.45" y2="1678.8" gradientTransform="translate(-558.2 -1601.9)" gradientUnits="userSpaceOnUse">
-                                                <stop offset="0" stop-color="#2a97ff"/>
-                                                <stop offset="1" stop-color="#00e97e"/>
-                                            </linearGradient>
-                                            <linearGradient id="O-Connor" x1="798.54" y1="1919.93" x2="798.54" y2="1679.5" xlink:href="#Cooler"/>
-                                        </defs>
-                                        <path d="M55.8,0H341.1a55.1,55.1,0,0,1,55.1,55.1V340.4a55.1,55.1,0,0,1-55.1,55.1H55.8a55.1,55.1,0,0,1-55-55.1V55.1A55.1,55.1,0,0,1,55.8,0Z" transform="translate(-0.8)" fill="transparent"/>
-                                        <path d="M63,198.5v-.7c0-66.1,49.4-120.9,118.2-120.9,37.9,0,61.9,12.3,83.6,30.4a14.2,14.2,0,0,1,5.3,10.7c0,7-6.3,13-13.3,13a15.7,15.7,0,0,1-8.7-3c-18-16.1-38.5-26.7-67.1-26.7-51.8,0-90.5,42-90.5,95.8v.7c0,54.1,39.1,96.5,90.5,96.5,29.1,0,49.4-10,69.5-28.4a12.4,12.4,0,0,1,8.3-3.6c6.7,0,12.7,6,12.7,12.6a12.6,12.6,0,0,1-4.3,9.4c-23.1,21-48.4,34.4-86.9,34.4C112.8,318.7,63,265.6,63,198.5Z" transform="translate(-0.8)" fill="url(#Cooler)"/>
-                                        <path d="M318.9,77.7a13.6,13.6,0,0,0-11.3,13.4v82.2A13.6,13.6,0,0,1,294,186.9H214.3a13.7,13.7,0,0,1-10.9-5.4,31.6,31.6,0,1,0-5.8,44.3,33.2,33.2,0,0,0,6.6-6.9,13.8,13.8,0,0,1,11.2-5.7H294a13.6,13.6,0,0,1,13.6,13.6v77.7a13.5,13.5,0,0,0,11.3,13.4,13.2,13.2,0,0,0,14.9-11.1,12.1,12.1,0,0,0,.1-1.9V90.7a13.1,13.1,0,0,0-13.1-13.1Z" transform="translate(-0.8)" fill="url(#O-Connor)"/>
-                                    </svg>
+                                    <img src="./images/chevere.svg" width="150" height="150">
                                 </a>
                             </div>
                         </div>
@@ -445,9 +434,10 @@
                         <!-- Social links -->
                         <ul class="flex mb-4 md:order-1 md:ml-4 md:mb-0">
                             <li class="ml-2">
-                                <a class="flex justify-center items-center text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out"
-                                    href="https://github.com/chevere/xrdebug" aria-label="Github">
-                                    <img src="./images/chevere.svg">
+                                <a class="flex justify-center items-center text-indigo-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://github.com/xrdebug" aria-label="Github">
+                                    <svg class="w-8 h-8 fill-current" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 8.2c-4.4 0-8 3.6-8 8 0 3.5 2.3 6.5 5.5 7.6.4.1.5-.2.5-.4V22c-2.2.5-2.7-1-2.7-1-.4-.9-.9-1.2-.9-1.2-.7-.5.1-.5.1-.5.8.1 1.2.8 1.2.8.7 1.3 1.9.9 2.3.7.1-.5.3-.9.5-1.1-1.8-.2-3.6-.9-3.6-4 0-.9.3-1.6.8-2.1-.1-.2-.4-1 .1-2.1 0 0 .7-.2 2.2.8.6-.2 1.3-.3 2-.3s1.4.1 2 .3c1.5-1 2.2-.8 2.2-.8.4 1.1.2 1.9.1 2.1.5.6.8 1.3.8 2.1 0 3.1-1.9 3.7-3.7 3.9.3.4.6.9.6 1.6v2.2c0 .2.1.5.6.4 3.2-1.1 5.5-4.1 5.5-7.6-.1-4.4-3.7-8-8.1-8z" />
+                                    </svg>
                                 </a>
                             </li>
                         </ul>
