--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         </div>
 
                         <div class="sm:col-span-6 md:col-span-3 lg:col-span-2">
-                            <h6 class="text-xs text-slate-200 font-semibold uppercase mb-3">Chevere</h6>
+                            <h6 class="text-xs text-slate-200 font-semibold uppercase underline mb-3">Chevere</h6>
                             <ul class="text-sm space-y-2">
                                 <li>
                                     <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" target="_blank" href="https://chevere.org">Chevere.org</a>
@@ -415,7 +415,7 @@
                             </ul>
                         </div>
                         <div class="sm:col-span-6 md:col-span-3 lg:col-span-2">
-                            <h6 class="text-xs text-slate-200 font-semibold uppercase mb-3">xrDebug</h6>
+                            <h6 class="text-xs text-slate-200 font-semibold uppercase underline mb-3">xrDebug</h6>
                             <ul class="text-sm space-y-2">
                                 <li>
                                     <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://docs.xrdebug.com">Documentation</a>
