fix command display

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="max-w-3xl mx-auto text-center">
                             <h1 class="h1 font-hkgrotesk mb-6" data-aos="fade-up">xrDebug</h1>
                             <p class="text-xl text-slate-500" data-aos="fade-up" data-aos-delay="100">Lightweight beautiful debugging tool. Quickly resolve bugs, optimize performance, and save valuable time at every stage of your project.</p>
-                            <input id="command-install" class="command-install form-input text-sm py-2 w-full" value="bash <(curl -sL xrdebug.com/bin.sh)">
+                            <div id="command-install" class="command-install text-sm w-full">bash <(curl -sL xrdebug.com/bin.sh)</div>
                         </div>
                         <!-- Hero image -->
                         <div class="pt-16 pb-12 mb-4" data-aos="fade-up" data-aos-delay="300">
