--- a/index.html
+++ b/index.html
@@ -402,31 +402,49 @@
                         </div>
 
                         <div class="sm:col-span-6 md:col-span-3 lg:col-span-2">
-                            <h6 class="text-xs text-slate-200 font-semibold uppercase underline mb-3">Chevere</h6>
-                            <ul class="text-sm space-y-2">
-                                <li>
-                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" target="_blank" href="https://chevere.org">Chevere.org</a>
-                                </li>
-                                <li>
-                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" target="_blank" href="https://github.com/chevere">GitHub</a>
-                                </li>
-                                <li>
-                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" target="_blank" href="https://packagist.org/packages/chevere/">Packagist</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="sm:col-span-6 md:col-span-3 lg:col-span-2">
                             <h6 class="text-xs text-slate-200 font-semibold uppercase underline mb-3">xrDebug</h6>
                             <ul class="text-sm space-y-2">
                                 <li>
                                     <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://docs.xrdebug.com">Documentation</a>
                                 </li>
                                 <li>
-                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://github.com/xrdebug/xrdebug/releases/latest">Download</a>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://github.com/xrdebug/xrdebug/releases/latest">Latest release</a>
                                 </li>
                                 <li>
-                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://github.com/xrdebug/php">PHP client</a>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://xrdebug.com/digitalocean">DigitalOcean</a>
                                 </li>
+                                <li>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://xrdebug.com/vultr">Vultr</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="sm:col-span-6 md:col-span-3 lg:col-span-2">
+                            <h6 class="text-xs text-slate-200 font-semibold uppercase underline mb-3">Client software</h6>
+                            <ul class="text-sm space-y-2">
+                                <li>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://github.com/xrdebug/php">PHP</a>
+                                </li>
+                                <li>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out">WordPress</a>
+                                </li>
+                                <li>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out">Laravel</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="sm:col-span-6 md:col-span-3 lg:col-span-2">
+                            <h6 class="text-xs text-slate-200 font-semibold uppercase underline mb-3">More software</h6>
+                            <ul class="text-sm space-y-2">
+                                <li>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://chevereto.com">Chevereto</a>
+                                </li>
+                                <li>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://chevere.org">Chevere</a>
+                                </li>
+                                <li>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://github.com/rodber">rodber</a>
+                                </li>
+
                             </ul>
                         </div>
                     </div>
@@ -443,7 +461,7 @@
                             </li>
                         </ul>
                         <!-- Links -->
-                        <div class="text-sm text-slate-500 transition duration-150 ease-in-out">Chevere Software &copy; <a rel="author" class="hover:text-slate-300" href="https://rodolfoberrios.com" target="_blank">Rodolfo Berrios</a></div>
+                        <div class="text-sm text-slate-500 transition duration-150 ease-in-out"><a class="hover:text-slate-300" href="https://chevere.org" target="_blank">Chevere Software</a> &copy; <a rel="author" class="hover:text-slate-300" href="https://rodolfoberrios.com" target="_blank">Rodolfo Berrios</a></div>
                     </div>
             </footer>
     </div>
