--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                                     <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://github.com/xrdebug/php">PHP</a>
                                 </li>
                                 <li>
-                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out">WordPress</a>
+                                    <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out" href="https://github.com/xrdebug/wordpress">WordPress</a>
                                 </li>
                                 <li>
                                     <a class="text-slate-500 hover:text-slate-300 transition duration-150 ease-in-out">Laravel</a>
